--- a/src/main/webapp/project1.html
+++ b/src/main/webapp/project1.html
@@ -5,10 +5,34 @@
 <title>Project</title>
 <link rel="icon" type="image/x-icon" href="images/favicon.png">
 <link rel="stylesheet" href="style.css">
+
+<style>
+ol, ul, li{
+    font-size:20px; 
+    font-family: 'MV Boli', serif; 
+}
+a{
+   font-size:25px; 
+   font-family: 'MV Boli', serif;
+}
+</style>
 </head>
 <body>
 <h1 style="font-family: MV Boli;"><center>PROJECT 1</center></h1>
-<p>description of the project and details</p>
-
+<h2>IMAGE PROCESSING</h2>
+<ol>
+<li>In this project, I have used Java to make changes in a photo.</li>
+<li>The changes that could be made in a photo are:</li>
+<ul>
+<li>make a NEGATIVE of a photo</li>
+<li>can WATERMARK a photo</li>
+<li>can MIRROR an image</li>
+<li>can make black and white photo</li>
+<li>can add SEPIA filter</li>
+<li>can generate a RANDOM PIXEL image as well</li>
+<li>can make blue, green, and red image of the colored image</li>
+</ul>
+</ol>
+<center><a href="https://github.com/khushboo26-bit/Image-Processing-in-Java/tree/master">Link of the project</a></center>
 </body>
 </html>
